--- a/mission/style.css
+++ b/mission/style.css
@@ -1,7 +1,9 @@
 #content {
-    margin: 0 auto;
+    margin: 40px auto;
     max-width: 600px;
     text-align: center;
+    border: 2px solid black;
+    padding: 20px;
 }
 h1 {
     letter-spacing: 2px;
