--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -24,8 +24,6 @@ nav {
 
 #menu-label {
     display: none;
-    font-weight: bold;
-    cursor: pointer;
 }
 
 nav a {
@@ -47,9 +45,48 @@ img {
     margin: 0.5rem;
 }
 
+dialog {
+    border: none;
+    padding: 0;
+    background: transparent;
+}
+
+dialog::backdrop {
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.image-viewer {
+    max-width: 90vw;
+    max-height: 90vh;
+}
+
+.close-viewer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.5rem;
+    background: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
 footer{
     text-align: center;
 }
-@media screen and (min-width: 700px) {
-
+@media screen and (max-width: 700px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    #menu-label {
+        display: block;
+        font-weight: bold;
+    }
+    nav a {
+        display: none;
+    }
+    nav.open a {
+        display: block;
+    }
 }
